[Feature] Now when working on a potential and changing to table potential, the new table potential will be a projection of the previous potential. [Feature] Now when working on a potential and selecting the same potential type from the spinner, the potential gets reset. In the case of Table Potential, this implies removing the projection it might had. [Bugfix] Fixed a bug in the Potential Edit Dialog where, if you went through multiple potential types and canceled the operation, the potential wouldn't go back to its original state, but to the last potential type you visited. Example of this bug: If you had a TablePotential, and clicked on Tree/Add, then on AugmentedProbTable, and then on Uniform and clicked on cancel, the potential wouldn't go back to the original TablePotential, but to AugmentedProbTable instead. [Bugfix] Potential edits dialogs now can again revert their operations via edits. Now the SetPotentialEdit stores a copy of the edit previous to the edition for this matter. [Refactor] Simplified PotentialEditDialog and ImposePolicyDialog.